situation/static/css/base.css
/* ... */
.services svg {
  position: absolute;
  width: 240px;
  height: 295px;
  left: 0;
}
.services path {
  stroke: #808080;
  fill: #808080;
}
.services img {
  position: relative;
}
.recent-updates {
  background-color: #edf3fa;
}
.recent-updates ul,
.recent-updates li {
  padding: 0;
}
.recent-updates li {
  padding-top: 27px;
  padding-bottom: 30px;
  font-size: 13px;
  display: table-cell;
  border-left: 2px solid #b3b3b3;
  vertical-align: top;
}
.recent-updates li:first-child {
  text-align: center;
  width: 225px;
  border-left: 0;
}
.recent-updates li.API {
  padding-left: 25px;
  padding-right: 25px;
  width: 192px;
}
.recent-updates li.JS {
  padding-left: 25px;
  padding-right: 25px;
  width: 192px;
}
.recent-updates li.DASH {
  width: auto;
  padding-left: 25px;
}
.recent-updates p,
.recent-updates em {
  font-family: 'HelveticaNeue-Roman', 'Helvetica Neue Roman', Arial, sans-serif;
  font-size: 14px;
  color: #666;
}
.recent-updates time {
  font-family: 'Open Sans';
  font-weight: 700;
  font-size: 11px;
  color: #222;
}
.recent-updates h3 {
  font-size: 16px;
  color: #444;
  text-transform: uppercase;
  font-weight: 700;
  text-transform: uppercase;
  font-family: 'Open Sans';
  line-height: 1.25em;
  text-align: right;
  padding-right: 30px;
  margin-bottom: 16px;
}
.uptime {
  background-color: #ffffff;
}
.uptime ul,
.uptime li {
  padding: 0;
}
.uptime li {
  padding: 50px 0;
  font-size: 13px;
  display: table-cell;
  border-left: 2px solid #b3b3b3;
  vertical-align: middle;
}
.uptime li:first-child {
  text-align: center;
  width: 225px;
  border-left: 0;
}
.uptime li.API h1,
.uptime li.JS h1,
.uptime li.DASH h1 {
  font-size: 38px;
  color: #555;
  font-family: 'Open Sans', 'Helvetica', 'Arial', sans-serif;
  font-weight: 400;
}
.uptime li.API h1 span,
.uptime li.JS h1 span,
.uptime li.DASH h1 span {
  font-size: 20px;
  vertical-align: top;
  display: inline-block;
  padding-left: 5px;
}
.uptime li.API {
  padding-left: 25px;
  width: 217px;
}
.uptime li.JS {
  padding-left: 25px;
  width: 217px;
}
.uptime li.DASH {
  width: auto;
  padding-left: 25px;
}
.uptime h3 {
  font-size: 16px;
  color: #444;
  text-transform: uppercase;
  font-family: 'Open Sans';
  font-weight: 700;
  line-height: 1.25em;
  text-align: right;
  padding-right: 30px;
}
div.messages {
  background: url(/static/images/stripe-background-clear.png) 0 0;
  padding-bottom: 40px;
}
div.messages li {
  list-style: none;
  line-height: auto;
}
div.messages li > div {
  display: table-cell;
  position: relative;
  border-left: 2px solid #b3b3b3;
  vertical-align: top;
}
div.messages li .API > div,
div.messages li .JS > div,
div.messages li .DASH > div {
  border-left: 8px solid #d9d9d9;
  position: absolute;
  left: 0;
  bottom: 0;
  top: 0;
}
div.messages li:nth-child(even) .API > div,
div.messages li:nth-child(even) .JS > div,
div.messages li:nth-child(even) .DASH > div {
  border-left: 8px solid #c7c7c7;
}
div.messages li .date {
  width: 195px;
  text-align: right;
  font-size: 26px;
  color: #999;
  font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', Arial, sans-serif;
  border-left: 0;
  padding: 13px 30px 13px 0;
}
div.messages li .API {
  width: 242px;
}
div.messages li .JS {
  width: 242px;
}
div.messages li .DASH {
  width: auto;
}
div.messages li.messages > .issues > div {
  position: static;
  float: left;
  clear: both;
}
div.messages li.issues .date {
  color: #000;
  font-family: 'HelveticaNeue-Bold', 'Helvetica Neue Bold', Arial, sans-serif;
}
div.messages li.issues .API.errors > div,
div.messages li.issues .JS.errors > div,
div.messages li.issues .DASH.errors > div {
  border-left: 8px solid #ef4135;
}
div.messages li.issues .API.issues > div,
div.messages li.issues .JS.issues > div,
div.messages li.issues .DASH.issues > div {
  border-left: 8px solid #eebd60;
}
div.messages li.issues:nth-child(odd) .API.issues > div,
div.messages li.issues:nth-child(odd) .JS.issues > div,
div.messages li.issues:nth-child(odd) .DASH.issues > div {
  border-left: 8px solid #E7A614;
}
div.messages li.issues:nth-child(odd) .API.errors > div,
div.messages li.issues:nth-child(odd) .JS.errors > div,
div.messages li.issues:nth-child(odd) .DASH.errors > div {
  border-left: 8px solid #f47e64;
}
div.messages .API .issue,
div.messages .JS .issue {
  min-width: 194px;
}
div.messages .issue {
  background-color: #43505e;
  margin: 0 10px 10px;
  padding: 10px;
  border-radius: 4px;
}
div.messages .issue time {
  font-family: 'Open Sans';
  font-weight: 700;
  font-size: 11px;
  color: #b3b3b3;
}
div.messages .issue p,
div.messages .issue em {
  font-family: 'HelveticaNeue-Roman', 'Helvetica Neue Roman', Arial, sans-serif;
  font-size: 13px;
  color: white;
}
div.messages .load {
  border-top: 1px solid #d9d9d9;
  border-bottom: 1px solid #d9d9d9;
  background-color: #f7f7f7;
  text-align: center;
  padding: 10px 0;
}
div.messages .load button {
  font-weight: bold;
  font-size: 12px;
  border: 0;
  border-radius: 16px;
  background-color: #78A22F;
  color-profile: white;
  color: white;
  -webkit-box-shadow: inset 0px 0px 1px 0px rgba(117, 117, 117, 0.3);
  -moz-box-shadow: inset 0px 0px 1px 0px rgba(117, 117, 117, 0.3);
  box-shadow: inset 0px 0px 1px 0px rgba(117, 117, 117, 0.3);
  display: inline-block;
  padding: 2px 15px;
  margin: 8px;
  text-transform: uppercase;
  height: auto;
  border: 2px solid #698e29;
}
div.messages .load button:hover {
  background: #96B45B;
  border-color: #78A22F;
  box-shadow: none;
}

/* XXX: we use a different name for the Twitter class since AdBlock will block
 * it otherwise; see https://github.com/FortAwesome/Font-Awesome/issues/1799 */
.icon-kltwitter:before {
  content: "\f099";
}

